src/objects/QPMS__Complaint_Product__c.object
<CustomObject>
    <description>This object stores product information.</description>
    <fields>
        <fullName>QPMS__Brand_Name__c</fullName>
        <description>This field is used to store Brand Name</description>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Catalog_Number__c</fullName>
        <description>This field is used to store Catalog Number</description>
        <label>Catalog Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Complaint Products</relationshipLabel>
        <relationshipName>Complaint_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_Available_for_Evaluation__c</fullName>
        <description>This field is used to store Device Available for Evaluation</description>
        <label>Device Available for Evaluation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>This field is used to store Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Number__c</fullName>
        <description>This field is used to store Lot Number value</description>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Date__c</fullName>
        <description>This field is used to store Manufacturing Date</description>
        <label>Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Code__c</fullName>
        <formula>QPMS__Product_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Complaint Products</relationshipLabel>
        <relationshipName>Complaint_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Serial_Number__c</fullName>
        <description>This field is used to store Serial Number</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Software_Version__c</fullName>
        <description>This field is used to store Software Version</description>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Unique_Device_Identifier_UDI__c</fullName>
        <description>This field is used to store Unique Device Identifier value</description>
        <label>Unique Device Identifier(UDI)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Complaint Product</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Complaint Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>